--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 body {
-  background-color: aquamarine;
+  background: #ecf4ff;
+  font-family: "Poppins", sans-serif;
 }
 
 header {
@@ -88,35 +90,122 @@ header {
 
 .section-1 {
   margin-top: 40px;
-} 
+}
 
-.wrapper{
+.wrapper {
   position: relative;
 
 }
 
-.carousel-inner{
-  border-radius: 40px;
-  position: relative !important;
 
+.carousel-inner {
+  border-radius: 20px;
+  position: relative !important;
+  
 }
 
-.carousel-control-prev , .carousel-control-next {
-  position:absolute !important;
+.carousel-control-prev,
+.carousel-control-next {
+  position: absolute !important;
 
   width: 42px;
-  height:42px;
-   background: linear-gradient(270deg, #4d5ef6 0%, #f64d4d 100%);
-   border-radius: 50%;
-   top: 46%;
-
+  height: 42px;
+  background: linear-gradient(270deg, #4d5ef6 0%, #f64d4d 100%);
+  border-radius: 50%;
+  top: 46%;
 }
 
-.carousel-control-next{
-   right: -62px;
+.carousel-control-next {
+  right: -62px;
 }
 
-.carousel-control-prev{
+.carousel-control-prev {
   left: -62px;
 }
 
+.carouselExampleCaptions {
+  position: relative;
+}
+.carousel-indicators {
+  position: absolute;
+  bottom: -50px;
+}
+
+.carousel-indicators > button {
+  background: linear-gradient(270deg, #4d5ef6 0%, #f64d4d 100%);
+  border-radius: 50%;
+  width: 16px !important;
+  height: 16px !important;
+}
+
+.card-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 9px 0px;
+  gap: 3px;
+  width: 135.89px;
+  height: 200px;
+  background: #ffffff;
+  border-radius: 10px;
+}
+
+.section-2 {
+  margin-top: 80px;
+}
+.cards-2 {
+  display: flex;
+  column-gap: 20px;
+  align-items: center;
+}
+
+.card-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 9px 0px;
+  gap: 3px;
+  width: 335.89px;
+  height: 230px;
+  background: #ffffff;
+  border-radius: 10px;
+  position: relative;
+}
+
+.card-1 > p {
+  font-style: normal;
+  font-weight: 539;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.01em;
+  color: #1e1e1e;
+  position: absolute;
+  bottom: 5%;
+  right: 20%;
+  left: 20px;
+}
+
+.section-2 h1 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 34px;
+  color: #1e1e1e;
+}
+
+.section-2 .button-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 17px 0px;
+  gap: 10px;
+  width: 1300px;
+  height: 50px;
+  background: #ffffff;
+  border-radius: 10px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin-top: 20px;
+}
