--- a/style.css
+++ b/style.css
@@ -86,22 +86,17 @@ header {
   margin-left: 10px;
 }
 
-
-
 .section-1 {
   margin-top: 40px;
 }
 
 .wrapper {
   position: relative;
-
 }
-
 
 .carousel-inner {
   border-radius: 20px;
   position: relative !important;
-  
 }
 
 .carousel-control-prev,
@@ -187,8 +182,6 @@ header {
 
 .section-2 h1 {
   font-style: normal;
-  font-weight: 400;
-  font-size: 28px;
   line-height: 34px;
   color: #1e1e1e;
 }
@@ -208,4 +201,127 @@ header {
   order: 0;
   flex-grow: 0;
   margin-top: 20px;
+}
+
+.section-3 {
+  margin-top: 70px;
+
+}
+.section-3 h1 {
+  margin-bottom: 20px;
+}
+
+.grey-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 17px;
+  color: #6c757d;
+}
+
+.cards-3 {
+  display: flex;
+  column-gap: 20px;
+  justify-content: space-between;
+}
+.cards-33 {
+  margin-top: 20px;
+  display: flex;
+  column-gap: 20px;
+  justify-content: space-between;
+}
+
+.card-img-top {
+  position: relative;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.card-shop {
+  position: absolute;
+  top: 90%;
+  right: 10%;
+  width: 30px;
+  height: 30px;
+}
+
+.cards-3 .card {
+  background: #ffffff;
+  border-radius: 10px;
+}
+.cards-33 .card {
+  background: #ffffff;
+  border-radius: 10px;
+}
+.section-3 .cards-3 .card .sale {
+  position: absolute;
+  top: 1%;
+  left: 2%;
+  z-index: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 5px 20px;
+  gap: 10px;
+  position: absolute;
+  width: 111px;
+  height: 29px;
+  background: #ff0101;
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+}
+
+.section-3 .cards-33 .card .sale {
+  position: absolute;
+  top: 1%;
+  left: 2%;
+  z-index: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 5px 20px;
+  gap: 10px;
+  position: absolute;
+  width: 111px;
+  height: 29px;
+  background: #ff0101;
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+}
+
+.section-3 .cards-3 .card .card-like {
+  position: absolute;
+  top: 2%;
+  right: 5%;
+  z-index: 3;
+  color: linear-gradient(
+    270deg,
+    rgba(77, 94, 246, 0.2) 0%,
+    rgba(246, 77, 77, 0.2) 100%
+  );
+  width: 30px;
+  height: 30px;
+}
+
+
+.section-3 .cards-33 .card .card-like {
+  position: absolute;
+  top: 2%;
+  right: 5%;
+  z-index: 3;
+  color: linear-gradient(
+    270deg,
+    rgba(77, 94, 246, 0.2) 0%,
+    rgba(246, 77, 77, 0.2) 100%
+  );
+  width: 30px;
+  height: 30px;
 }
