--- a/style.css
+++ b/style.css
@@ -202,7 +202,10 @@ header {
   flex-grow: 0;
   margin-top: 20px;
 }
-
+.section-2 .button-2:hover{
+  background-color: rgb(199, 222, 243);
+  transition: all 0.2s ease;
+}
 .section-3 {
   margin-top: 70px;
 
@@ -324,4 +327,30 @@ header {
   );
   width: 30px;
   height: 30px;
+}
+
+.section-3 .button-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 17px 0px;
+  gap: 10px;
+  width: 1300px;
+  height: 50px;
+  background: #ffffff;
+  border-radius: 10px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin-top: 20px;
+}
+
+.section-3 .button-2:hover{
+  background-color: rgb(199, 222, 243);
+  transition: all 0.2s ease;
+}
+
+.section-4{
+  margin-top: 60px;
 }
