--- a/style.css
+++ b/style.css
@@ -202,13 +202,12 @@ header {
   flex-grow: 0;
   margin-top: 20px;
 }
-.section-2 .button-2:hover{
+.section-2 .button-2:hover {
   background-color: rgb(199, 222, 243);
   transition: all 0.2s ease;
 }
 .section-3 {
   margin-top: 70px;
-
 }
 .section-3 h1 {
   margin-bottom: 20px;
@@ -314,7 +313,6 @@ header {
   height: 30px;
 }
 
-
 .section-3 .cards-33 .card .card-like {
   position: absolute;
   top: 2%;
@@ -346,11 +344,77 @@ header {
   margin-top: 20px;
 }
 
-.section-3 .button-2:hover{
+.section-3 .button-2:hover {
   background-color: rgb(199, 222, 243);
   transition: all 0.2s ease;
 }
 
-.section-4{
+.section-4 {
   margin-top: 60px;
+}
+
+.section-5 {
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
+.cards-5 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+.section-5 .cards-5 .card-5 {
+  width: 188px;
+  height: 100px;
+}
+
+footer {
+  width: 100%;
+  height: 450px;
+  background: linear-gradient(
+    270deg,
+    rgba(77, 94, 246, 0.2) 0%,
+    rgba(246, 77, 77, 0.2) 100%
+  );
+  position: relative;
+}
+footer > .container {
+  padding: 50px 0;
+  display: flex;
+}
+
+footer .container ul {
+  list-style-type: none;
+  width: 218px;
+}
+footer .container ul li {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.01em;
+  color: #1e1e1e;
+  margin: 20px 0;
+}
+#axborot {
+  margin-left: 220px;
+  width: 395px;
+}
+
+#icons {
+  width: 250px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer::after {
+  position: absolute;
+  content: "";
+  height: 2px;
+  background-color: #242424;
+  width: 1230px;
+  bottom: 20%;
+  z-index: 2;
+  right: 20%;
 }
