--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 header {
-  width: 1550px;
   height: 100px;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -369,8 +368,7 @@ header {
 }
 
 footer {
-  width: 100%;
-  height: 450px;
+  height: auto;
   background: linear-gradient(
     270deg,
     rgba(77, 94, 246, 0.2) 0%,
@@ -408,13 +406,23 @@ footer .container ul li {
   align-items: center;
 }
 
-footer::after {
-  position: absolute;
-  content: "";
-  height: 2px;
-  background-color: #242424;
-  width: 1230px;
-  bottom: 20%;
-  z-index: 2;
-  right: 20%;
+.end {
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.end {
+  border-top: 2px solid black;
+  height: auto !important;
+  width: 1320px;
+  padding-top: 50px;
+  padding-right: 200px;
+  border: 1px;
+  border-color: linear-gradient(
+    270deg,
+    rgba(77, 94, 246, 0.2) 0%,
+    rgba(246, 77, 77, 0.2) 100%
+  );
+  border-top: 2px solid rgba(255, 48, 48, 0.829) ;
 }
