--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@ header {
   height: 100px;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 100%;
+  z-index: 4444;
 }
 
 .body {
@@ -86,7 +94,7 @@ header {
 }
 
 .section-1 {
-  margin-top: 40px;
+  margin-top: 140px;
 }
 
 .wrapper {
@@ -203,7 +211,7 @@ header {
 }
 .section-2 .button-2:hover {
   background-color: rgb(199, 222, 243);
-  transition: all 0.2s ease;
+  transition: all 0.3s ease;
 }
 .section-3 {
   margin-top: 70px;
@@ -424,5 +432,5 @@ footer .container ul li {
     rgba(77, 94, 246, 0.2) 0%,
     rgba(246, 77, 77, 0.2) 100%
   );
-  border-top: 2px solid rgba(255, 48, 48, 0.829) ;
+  border-top: 2px solid rgba(255, 48, 48, 0.829);
 }
